package factory;

/**
 * The class Product.
 * 产品接口
 *
 * @author GungnirLaevatain
 * @version 2019 -05-22 22:41:52
 * @since JDK 11
 */
public interface Product {
    /**
     * Gets name.
     * 获得该产品的名称
     *
     * @return the name
     * 名称
     * @author GungnirLaevatain
     */
    String getName();
}
